--- a/Polinomtest/Polinomtest/Polinomtest.vcproj
+++ b/Polinomtest/Polinomtest/Polinomtest.vcproj
@@ -171,11 +171,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\Polinomtest.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\stdafx.cpp"
+				RelativePath=".\main.cpp"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -193,6 +189,10 @@
 						UsePrecompiledHeader="1"
 					/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\Polinomtest.cpp"
+				>
 			</File>
 		</Filter>
 		<Filter
