--- a/Polinomtest/Polinomtest/Polinomtest.vcproj
+++ b/Polinomtest/Polinomtest/Polinomtest.vcproj
@@ -175,6 +175,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\chainreduction1.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\chainreduction2.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\main.cpp"
 				>
 				<FileConfiguration
