--- a/HypernetTest/CMakeLists.txt
+++ b/HypernetTest/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.9)
-project(HyperNetTest)
+project(HypernetTest)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(HyperNetTest main.cpp stdafx.h funcs.h globals.h Branch.h pairconnection.cpp Branch.cpp Hypernet.h Hypernet.cpp)
+add_executable(HyperNetTest Main.cpp Stdafx.h Funcs.h Globals.h Branch.h PairConnectivity.cpp Branch.cpp Hypernet.h Hypernet.cpp GenCombinations.cpp)
