--- a/Development/HypernetTest/CMakeLists.txt
+++ b/Development/HypernetTest/CMakeLists.txt
@@ -3,4 +3,9 @@ project(HypernetTest)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(HyperNetTest Main.cpp Stdafx.h Funcs.h Globals.h Branch.h PairConnectivity.cpp Branch.cpp Hypernet.h Hypernet.cpp GenCombinations.cpp)
+#standard libraries
+set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
+#other libraries
+set(CMAKE_EXE_LINKER_FLAGS "-static -lpthread")
+set(SOURCE_FILES Main.cpp Stdafx.h Funcs.h Globals.h Branch.h PairConnectivity.cpp Branch.cpp Hypernet.h Hypernet.cpp GenCombinations.cpp)
+add_executable(HypernetTest ${SOURCE_FILES})
